unit_tests/regression.suite/cast-checks-2.err
(vector)-<1,2,3>;
         ^
(Line 3 char 10): ERROR: Syntax error
