unit_tests/regression.suite/cast-checks-2.lsl
default{timer(){

(vector)-<1,2,3>;

}}
 